# llm-ur-control

./: .gitignore  LICENSE  README.md
custom_msgs/: CMakeLists.txt  package.xml
src/ur_agent/: CMakeLists.txt  package.xml
src/ur_agent/launch/: agent.launch.py
src/ur_agent/scripts/: help.py  ur_agent.py
ur_agent/: CMakeLists.txt
ur_agent/config/: ur_controllers.yaml  ur_moveit.launch.py
ur_agent/launch/: agent.launch.py
ur_agent/scripts/: cartesian_motion_server.py  controller_switcher copy.py  controller_switcher.py  llm.py  prompts.py  ur_agent.py
ur_agent/scripts/tools/: ur.py
