<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>ur_agent</name>
    <version>0.0.1</version>
    <description>Embodied ROSA agent for the UR robot.</description>

    <maintainer email="cakh@mb.tu-chemnitz.de">Akhil Anilkumar</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclpy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_export_depend>rclpy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>std_srvs</build_export_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <depend>controller_manager_msgs</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
  
    <export>
      <build_type>ament_cmake</build_type>
    </export>

</package>